--- a/frontend/src/components/ReviewForm/styles.module.css
+++ b/frontend/src/components/ReviewForm/styles.module.css
@@ -1,5 +1,6 @@
 .formContainer {
   background-color: #ffffff;
+  padding: 1rem;
   border-radius: 8px;
   text-align: left;
 }
@@ -8,16 +9,27 @@
   font-size: 1.25rem;
   color: #333;
   margin-bottom: 1rem;
+  border-bottom: 2px solid #eee;
+  padding-bottom: 0.5rem;
 }
 
 .submitButton {
-  background-color: #28a745;
+  background-color: #28a745; 
   color: white;
   padding: 0.75rem 1.5rem;
   border-radius: 4px;
   font-size: 1rem;
   cursor: pointer;
   width: 70%;
+}
+
+.cancelButton {
+  background-color: #6c757d; 
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 30%;
 }
 
 .submitButton:hover {
@@ -41,7 +53,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 1rem;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 .textarea {
