--- a/frontend/src/components/ProgressBar/styles.module.css
+++ b/frontend/src/components/ProgressBar/styles.module.css
@@ -9,36 +9,33 @@
   background-color: white;
   padding: 2px;
   overflow: hidden;
-  display: flex;
-  align-items: center;
 }
 
 .filler {
   height: 100%;
   background-color: #000080; 
-  width: 0%;
-  animation: progress 2s linear infinite;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  bottom: 2px;
+  z-index: 1;
 }
 
 .blocks {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(
     90deg, 
-    #000080 0%, 
-    #000080 70%, 
-    transparent 70%, 
-    transparent 100%
+    transparent 0%, 
+    transparent 80%, 
+    white 80%, 
+    white 100%
   );
-  background-size: 14px 100%;
-  animation: moveBlocks 1s linear infinite;
-}
-
-@keyframes progress {
-  0% { width: 0%; }
-  100% { width: 100%; }
-}
-@keyframes moveBlocks {
-  0% { background-position: 0 0; }
-  100% { background-position: 20px 0; }
+  background-size: 15px 100%;
+  z-index: 2;
+  opacity: 0.3;
+  pointer-events: none;
 }
